deploy/kind/prerequisites/nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hypershell-api-server-nodeport
  namespace: hypershell-system
spec:
  type: NodePort
  selector:
    app: hypershell-api-server
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: hypershell-grpc-nodeport
  namespace: hypershell-system
spec:
  type: NodePort
  selector:
    app: hypershell-api-server
  ports:
    - name: grpc
      port: 9000
      targetPort: 9000
      nodePort: 30090
---
apiVersion: v1
kind: Service
metadata:
  name: hypershell-health-nodeport
  namespace: hypershell-system
spec:
  type: NodePort
  selector:
    app: hypershell-api-server
  ports:
    - name: health
      port: 8434
      targetPort: 8434
      nodePort: 30100
---
apiVersion: v1
kind: Service
metadata:
  name: hypershell-web-console-nodeport
  namespace: hypershell-system
spec:
  type: NodePort
  selector:
    app: hypershell-web-console
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30110
