deploy/kind/prerequisites/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-server
  namespace: hypershell-system
spec:
  parentRefs:
    - name: hypershell-gw
      namespace: hypershell-system
  hostnames:
    - api.hypershell.localhost
  rules:
    - backendRefs:
        - name: hypershell-api-server
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-console
  namespace: hypershell-system
spec:
  parentRefs:
    - name: hypershell-gw
      namespace: hypershell-system
  hostnames:
    - console.hypershell.localhost
  rules:
    - backendRefs:
        - name: hypershell-web-console
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: health
  namespace: hypershell-system
spec:
  parentRefs:
    - name: hypershell-gw
      namespace: hypershell-system
  hostnames:
    - health.hypershell.localhost
  rules:
    - backendRefs:
        - name: hypershell-api-server
          port: 8434
